--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_fonts: ^6.2.1
   circular_countdown_timer: ^0.2.4
   pin_code_fields: ^8.0.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
